--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-captini-test-env/
+venv/
+
+# Django stuff:
+*.log
+*.pot
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
