--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-heroku==0.3.1
 django-rest-auth==0.9.5
 djangorestframework==3.13.1
 psycopg2==2.9.3
+PyJWT==2.3.0
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
