--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.5.0
 dj-database-url==0.5.0
 Django==4.0.3
+django-better-admin-arrayfield==1.4.2
 django-cors-headers==3.11.0
 django-heroku==0.3.1
+django-language-field==0.0.3
 django-rest-auth==0.9.5
 djangorestframework==3.13.1
 psycopg2==2.9.3
