--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-extensions==3.1.5
 django-heroku==0.3.1
 django-language-field==0.0.3
 django-rest-auth==0.9.5
+django-rest-passwordreset==1.2.1
 djangorestframework==3.13.1
 pika==1.2.1
 psycopg2==2.9.3
