--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ django-cors-headers==3.11.0
 django-extensions==3.1.5
 django-heroku==0.3.1
 django-language-field==0.0.3
+django-nested-admin==3.4.0
 django-rest-auth==0.9.5
 django-rest-passwordreset==1.2.1
 djangorestframework==3.13.1
 pika==1.2.1
 psycopg2==2.9.3
 PyJWT==2.3.0
+python-monkey-business==1.0.0
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
