--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
 asgiref==3.5.0
+black==22.6.0
+click==8.1.3
 dj-database-url==0.5.0
 Django==4.0.3
 django-better-admin-arrayfield==1.4.2
 django-cors-headers==3.11.0
 django-extensions==3.1.5
+django-filter==22.1
 django-heroku==0.3.1
 django-language-field==0.0.3
 django-nested-admin==3.4.0
 django-rest-auth==0.9.5
 django-rest-passwordreset==1.2.1
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
+mypy-extensions==0.4.3
+pathspec==0.9.0
 pika==1.2.1
+platformdirs==2.5.2
 psycopg2==2.9.3
-PyJWT==2.3.0
+PyJWT==2.4.0
 python-monkey-business==1.0.0
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
+tomli==2.0.1
 whitenoise==6.0.0
