--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,9 @@ pathspec==0.9.0
 pika==1.2.1
 platformdirs==2.5.2
 psycopg2==2.9.3
+pygraphviz==1.10
 PyJWT==2.4.0
+python-dotenv==0.21.0
 python-monkey-business==1.0.0
 pytz==2021.3
 six==1.16.0
